# rust

./: Cargo.toml  README.md  commands.md  compostos.md  escalares.md  inteiros.md
src/: calculations.rs  enums.rs  functions.rs  indicatif.rs  is_palindrome.rs  logger.rs  loops.rs  main.rs  memories.rs  ownership_borrowing.rs  pointer.rs  primitives_types.rs  string.rs  test.rs  variables.rs
