[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.8"
env_logger = "0.11.3"
log = "0.4.21"

[profile.release]
stip = true # retirar símbolos de depuração do binário
opt-level = "z" # otimização para tamanho do binário
lto = true # link time optimization (otimização em tempo de link)
codegen-units = 1 # número de unidades de compilação 
panic = "abort" # remove traceback information 